--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         </section>
     </main>
     <script src="app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </body>
 </html>
