Atualização de arquivos

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <img src="assets/amigo-secreto.png" alt="Imagem representativa de amigo secreto">
         </header>   
         <section class="input-section">
-            <h2 class="section-title">Digite o nome dos seus amigos</h2>
+            <h2 class="section-title">Digite o nome dos seus Amigos</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Digite um nome">
                 <button id="adicionarNome" class="button-add">
                     <img src="assets/play_circle_outline.png" alt="Ícone para adicionar" style="margin-right: 8px;">
-                    Adicionar
+                    Adicionar Amigo
                 </button>
                 <ul id="listaNomes"></ul>
             </div>
